--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=MTTEH Library
 version=0.0.0
-author=GGLinnk, Kiradae, Narutarder, Wabia
+author=GGLinnk <gglinnk@protonmail.com>, Kiradae, Narutarder, Wabia
 maintainer=GGLinnk <gglinnk@protonmail.com>
 sentence=Arduino Library for MTTEH Project
 paragraph=Arduino Library for MTTEH Project
-category=Project
+category=Other
 url=https://github.com/mtteh/MTTEH-Software
 architectures=*
-includes=mtteh.h
+depends=Adafruit Unified Sensor, Adafruit SGP30 Sensor, Adafruit MMA8451 Library, Adafruit MCP9808 Library
