Update Arduino library properties
Fix project URL
Add library requirement.

--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=GGLinnk <gglinnk@protonmail.com>
 sentence=Arduino Library for MTTEH Project
 paragraph=Arduino Library for MTTEH Project
 category=Other
-url=https://github.com/mtteh/MTTEH-Software
+url=https://github.com/MTTEH/MTTEH_Software
 architectures=*
-depends=Adafruit Unified Sensor, Adafruit SGP30 Sensor, Adafruit MMA8451 Library, Adafruit MCP9808 Library
+depends=Adafruit Unified Sensor, Adafruit SGP30 Sensor, Adafruit MCP9808 Library, MTTEH MMA8451 Co-Library
